refactor: update successfulAuthentication in AuthenticationFilter